--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@heroicons/react": "^2.0.13",
     "http-server": "^14.1.1",
     "next": "latest",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
