--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-awesome-reveal": "^4.1.0",
     "react-dom": "18.2.0",
-    "react-scroll-motion": "^0.3.2"
+    "react-scroll-motion": "^0.3.2",
+    "yet-another-react-lightbox": "^2.2.7"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
