--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/react": "^11.10.5",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
+    "@vercel/analytics": "^0.1.8",
     "http-server": "^14.1.1",
     "next": "latest",
     "next-themes": "^0.2.1",
