--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,6 +14,7 @@
     "@vercel/analytics": "^0.1.8",
     "http-server": "^14.1.1",
     "next": "latest",
+    "next-sitemap": "^3.1.47",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-awesome-reveal": "^4.1.0",
