--- a/package.json
+++ b/package.json
@@ -9,29 +9,35 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
-    "@headlessui/react": "^1.7.7",
-    "@heroicons/react": "^2.0.13",
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.16",
     "@vercel/analytics": "^0.1.8",
+    "gray-matter": "^4.0.3",
     "http-server": "^14.1.1",
+    "markdown-it": "^13.0.1",
     "next": "latest",
+    "next-mdx-remote": "^4.4.1",
     "next-sitemap": "^3.1.47",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-awesome-reveal": "^4.1.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.5",
     "react-scroll-motion": "^0.3.2",
+    "remark-gfm": "^3.0.1",
     "yet-another-react-lightbox": "^2.2.7"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.12",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.4",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
     "typescript": "4.9.4"
   }
 }
