--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
     "@vercel/analytics": "^0.1.8",
+    "gatsby-plugin-smoothscroll": "^1.2.0",
     "gray-matter": "^4.0.3",
     "http-server": "^14.1.1",
     "markdown-it": "^13.0.1",
@@ -23,6 +24,7 @@
     "react-awesome-reveal": "^4.1.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.5",
+    "react-scroll": "^1.8.9",
     "react-scroll-motion": "^0.3.2",
     "remark-gfm": "^3.0.1",
     "yet-another-react-lightbox": "^2.2.7"
@@ -33,6 +35,7 @@
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/react-scroll": "^1.8.6",
     "autoprefixer": "^10.4.14",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
