--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-markdown": "^8.0.5",
     "react-scroll": "^1.8.9",
     "react-scroll-motion": "^0.3.2",
+    "react-scroll-parallax": "^3.4.5",
     "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
     "sharp": "^0.31.3",
