--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@emotion/react": "^11.10.5",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.6",
     "@vercel/analytics": "^0.1.8",
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "gray-matter": "^4.0.3",
