--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "gray-matter": "^4.0.3",
     "http-server": "^14.1.1",
     "markdown-it": "^13.0.1",
-    "next": "latest",
+    "next": "14.2.4",
     "next-mdx-remote": "^4.4.1",
     "next-sitemap": "^3.1.47",
     "next-themes": "^0.2.1",
