--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "18.11.3",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
+    "@types/node": "^22.10.1",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "18.2.7",
     "@types/react-scroll": "^1.8.6",
     "autoprefixer": "^10.4.14",
     "eslint": "8.31.0",
