--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.6",
     "@vercel/analytics": "^0.1.8",
+    "@vercel/speed-insights": "^1.1.0",
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "gray-matter": "^4.0.3",
     "http-server": "^14.1.1",
